cabal-version:      3.0
name:               githubpage-builder
version:            0.1.0.0
author:             mtwtkman
maintainer:         924277+mtwtkman@users.noreply.github.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable githubpage-builder
    import:           warnings
    main-is:          Main.hs
    build-depends:
      base,
      optparse-applicative,
      cmark,
      yaml,
      text,
      time
    hs-source-dirs:   app
    default-language: Haskell2010
