cabal-version:      3.0
name:               mtwtkman-ghio
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable gh
    import:           warnings
    main-is:          Main.hs
    build-depends:
      base,
      text,
      sqlite-simple,
      yaml,
      cmark,
      time
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
      Blog.Entity
      Blog.UseCase.CreateDraft
      Blog.Datastore.Sqlite
