[tool.poetry]
name = "mtwtkman-github-io"
version = "0.1.0"
description = ""
authors = ["mtwtkman <924277+mtwtkman@users.noreply.github.com>"]
packages = [
  { include = "sarvant.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sarvant = 'sarvant:run'
