[package]
name = "editor"
version = "0.1.0"
authors = ["mtwtkman <punipuniomochi@gmail.com>"]

[dependencies]
hyper = "*"
iron = "*"
router = "*"
staticfile = "*"
diesel = "*"
diesel_infer_schema = { version = "*", features = ["sqlite"] }
handlebars-iron = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
dotenv = "*"
pulldown-cmark = "*"

[features]
watch = ["handlebars-iron/watch"]
