[package]
name = "editor"
version = "0.0.1"
authors = ["mtwtkman <punipuniomochi@gmail.com>"]

[dependencies]
rocket = "*"
rocket_contrib = { version = "*", features = ["json"] }
rocket_codegen = "*"
diesel = { version = "*", features = ["sqlite", "chrono"] }
diesel_derives = { version = "*", features = ["sqlite"] }
serde = "*"
serde_json = "*"
serde_derive = "*"
r2d2 = "*"
r2d2-diesel = "*"
chrono = { version = "*", features = ["serde"] }
